--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     <main class="main">
         <article id="beginning" class="flex-center flex-column">
-            <h1>Code Quiz</h1>
+            <h1>{Code Quiz}</h1>
             <p>
-                Welcome to a challange to test your knowledge on HTML, CSS and Javascript.<br> This is a multiple-choice, timed quiz with five expert level questions.<br> You have 1 minute to answer all and the option to save your score afterwards.<br> When ready please click on the start button, good luck!
+                Welcome to a challange to test your knowledge on HTML, CSS and Javascript. This is a multiple-choice, timed quiz with five expert level questions. You have 1 minute to answer all and the option to save your score afterwards. When ready please click on the "play" button and good luck!
             </p>
-            <button>START</button>
-            <button>HIGH SCORES</button>
+            <a class="btn" href="quiz.html">Play</a>
+            <a class="btn" href="high-scores.html">High Scores</a>
         </article>
     </main>    
 </body>
