Quiz page files added and home page files updated.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main class="main">
         <article id="beginning" class="flex-center flex-column">
             <h1>{Code Quiz}</h1>
-            <p>
+            <p class="intro">
                 Welcome to a challange to test your knowledge on HTML, CSS and Javascript. This is a multiple-choice, timed quiz with five expert level questions. You have 1 minute to answer all and the option to save your score afterwards. When ready please click on the "play" button and good luck!
             </p>
             <a class="btn" href="quiz.html">Play</a>
