timer w penalty feature and correct  question counter, html and css updates.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <article id="beginning" class="flex-center flex-column">
             <h1>{Code Quiz}</h1>
             <p class="intro">
-                Welcome to a challange to test your knowledge on HTML, CSS and Javascript. This is a multiple-choice, timed quiz with five expert level questions. You have 1 minute to answer all and the option to save your score afterwards. When ready please click on the "play" button and good luck!
+                Welcome to a challange to test your knowledge on HTML, CSS and Javascript. This is a multiple-choice, timed quiz with five questions. You have 45 seconds to answer all and the option to save your score afterwards. Any wrong answer will shorten the time by five seconds. When ready please click on the "play" button and good luck!
             </p>
             <a class="btn" href="quiz.html">Play</a>
             <a class="btn" href="high-scores.html">High Scores</a>
