--- a/quiz.html
+++ b/quiz.html
@@ -11,12 +11,20 @@
 <body>
     <main class="main">
 
-        <div class= "timer">
-            <div class = "timer-text">
-            <div class="timer-count">60</div>
-            <h3>seconds left</h3>
+        <header>
+            <div>
+                <div class = "header-item">
+                <div id="timer-count" class="counters">45</div>
+                <h3>seconds remaining</h3>
+                </div>
             </div>
-        </div>
+            <div>
+                <div class = "header-item">
+                <div id="correct-count" class="counters">0</div>
+                <h3>correct answers</h3>
+                </div>
+            </div>
+        </header>
 
         <article id="quest-cont" class="article">
             
