--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <main class="main">
-        <article id="beginning" class="flex-center flex-column">
-            <h1>{Code Quiz}</h1>
-            <p class="intro">
+        <article id="beginning" class="flex-center flex-column intro">
+            <h1>{ Code Quiz }</h1>
+            <p class="intro-p">
                 Welcome to a challange to test your knowledge on HTML, CSS and Javascript. This is a multiple-choice, timed quiz with five questions. You have 45 seconds to answer all and the option to save your score afterwards. Any wrong answer will shorten the time by five seconds. When ready please click on the "play" button and good luck!
             </p>
             <a class="btn" href="quiz.html">Play</a>
