comments added, unused and reference coding was cleaned.

--- a/final.html
+++ b/final.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="assets/images/new-favicon.ico" rel="shortcut icon">
     <title>Final | Code Quiz</title>
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
     <main class="main">
-        <article id="final" class="flex-center flex-column intro">
+        <article id="final" class="intro">
             <h2 id="finalScore"></h2>
             <p class="intro-p">
                 Please submit a username to save your score.
@@ -32,7 +33,7 @@
                 </button>
               </form>
             <a class="btn" href="quiz.html">Play Again</a>
-            <a class="btn" href="quiz.html">High Scores</a>
+            <a class="btn" href="highscores.html">High Scores</a>
         </article>
     </main>
     <script src="assets/final.js"></script>   
