--- a/highscores.html
+++ b/highscores.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="assets/images/new-favicon.ico" rel="shortcut icon">
     <title>High Scores | Code Quiz</title>
     <link rel="stylesheet" href="assets/style.css">
-    <link rel="stylesheet" href="assets/highscores.css">
 </head>
 <body>
     <main class="main">
-        <article id="highScores" class="flex-center flex-column intro">
+        <article id="highScores" class="intro">
             <h2>High Scores</h2>
             <ul id="highScoresList" class="intro-p">                
             </ul>
