--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="assets/images/new-favicon.ico" rel="shortcut icon">
     <title>Home | Code Quiz</title>
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
     <main class="main">
-        <article id="beginning" class="flex-center flex-column intro">
+        <article class="intro">
             <h1>{ Code Quiz }</h1>
             <p class="intro-p">
                 Welcome to a challange to test your knowledge on HTML, CSS and Javascript. This is a multiple-choice, timed quiz with five questions. You have 45 seconds to answer all and the option to save your score afterwards. Any wrong answer will shorten the time by five seconds. When ready please click on the "play" button and good luck!
             </p>
             <a class="btn" href="quiz.html">Play</a>
-            <a class="btn" href="high-scores.html">High Scores</a>
+            <a class="btn" href="highscores.html">High Scores</a>
         </article>
     </main>    
 </body>
